lean: Add support for binary installations